--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,8 +8,63 @@
 
 body {
   width: 100%;
-  height: auto;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
+}
+
+#app {
+  position: absolute;
+  top: 42%;
+}
+
+#app .panel {
+  width: 100%;
+}
+
+#app .panel__header {
+  font-weight: 400;
+  font-size: 3rem;
+  text-align: center;
+}
+
+#app .panel__form {
+  width: 315px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#app .panel__in {
+  height: 40px;
+  border: 0;
+  outline: 0;
+  text-align: center;
+  border-bottom: 3px solid #dbdbdb;
+  transition: 300ms border-bottom;
+}
+
+#app .panel__in:focus {
+  border-bottom: 3px solid #1597f4;
+}
+
+#app .panel__btn {
+  height: 40px;
+  width: 100px;
+  background-color: #1597f4;
+  outline: 0;
+  border: 0;
+  color: white;
+  border-radius: 5px;
+  transition: 300ms filter;
+}
+
+#app .panel__btn:hover {
+  filter: brightness(110%);
+  cursor: pointer;
+}
+
+#app .panel__btn:active {
+  filter: brightness(90%);
 }
 /*# sourceMappingURL=style.css.map */
