--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,3 +1,5 @@
+$color1: #1597f4;
+
 * {
   margin: 0;
   padding: 0;
@@ -8,7 +10,62 @@
 
 body {
   width: 100%;
-  height: auto;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
+}
+
+#app {
+  position: absolute;
+  top: 42%;
+
+  .panel {
+    width: 100%;
+
+    &__header {
+      font-weight: 400;
+      font-size: 3rem;
+      text-align: center;
+    }
+
+    &__form {
+      width: 315px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    &__in {
+      height: 40px;
+      border: 0;
+      outline: 0;
+      text-align: center;
+      border-bottom: 3px solid rgb(219, 219, 219);
+      transition: 300ms border-bottom;
+
+      &:focus {
+        border-bottom: 3px solid $color1;
+      }
+    }
+
+    &__btn {
+      height: 40px;
+      width: 100px;
+      background-color: $color1;
+      outline: 0;
+      border: 0;
+      color: white;
+      border-radius: 5px;
+      transition: 300ms filter;
+
+      &:hover {
+        filter: brightness(110%);
+        cursor: pointer;
+      }
+
+      &:active {
+        filter: brightness(90%);
+      }
+    }
+  }
 }
