--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,18 +8,32 @@
 
 body {
   width: 100%;
-  min-height: 100vh;
   display: flex;
   justify-content: center;
 }
 
 #app {
-  position: absolute;
-  top: 42%;
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 #app .panel {
-  width: 100%;
+  width: 400px;
+  height: 115px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  top: 40%;
+  transition: 300ms top;
+}
+
+#app .panel--top {
+  position: relative;
+  top: 10px;
 }
 
 #app .panel__header {
@@ -66,5 +80,37 @@ body {
 
 #app .panel__btn:active {
   filter: brightness(90%);
+}
+
+#app .gallery {
+  width: 100%;
+  min-height: 20px;
+  padding: 20px;
+  position: relative;
+  top: 40%;
+  transition: 300ms top;
+  display: grid;
+  gap: 20px;
+  grid-template-columns: repeat(auto-fit, 300px);
+  grid-auto-rows: 300px;
+  justify-content: center;
+  align-items: center;
+}
+
+#app .gallery__image {
+  width: 100%;
+  height: 100%;
+}
+
+#app .gallery__img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 5px;
+}
+
+#app .gallery--top {
+  position: relative;
+  top: 10px;
 }
 /*# sourceMappingURL=style.css.map */
