--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,17 +10,31 @@ $color1: #1597f4;
 
 body {
   width: 100%;
-  min-height: 100vh;
   display: flex;
   justify-content: center;
 }
 
 #app {
-  position: absolute;
-  top: 42%;
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
   .panel {
-    width: 100%;
+    width: 400px;
+    height: 115px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    top: 40%;
+    transition: 300ms top;
+
+    &--top {
+      position: relative;
+      top: 10px;
+    }
 
     &__header {
       font-weight: 400;
@@ -66,6 +80,38 @@ body {
       &:active {
         filter: brightness(90%);
       }
+    }
+  }
+
+  .gallery {
+    width: 100%;
+    min-height: 20px;
+    padding: 20px;
+    position: relative;
+    top: 40%;
+    transition: 300ms top;
+    display: grid;
+    gap: 20px;
+    grid-template-columns: repeat(auto-fit, 300px);
+    grid-auto-rows: 300px;
+    justify-content: center;
+    align-items: center;
+
+    &__image {
+      width: 100%;
+      height: 100%;
+    }
+
+    &__img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 5px;
+    }
+
+    &--top {
+      position: relative;
+      top: 10px;
     }
   }
 }
