--- a/src/css/style.css
+++ b/src/css/style.css
@@ -107,6 +107,7 @@ body {
   height: 100%;
   object-fit: cover;
   border-radius: 5px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
 }
 
 #app .gallery--top {
